# ChurnGuard-MLops-Customer-Retention-Pipeline

./: .gitignore  README.md  main.ipynb  pyproject.toml
.ipynb_checkpoints/: main-checkpoint.ipynb
data/: raw_events.parquet
features/: feature_table.parquet  quality_report.json
