[project]
name = "mle-churn-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "mlflow>=1.27.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "protobuf>=4.21.0,<5.0.0",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools==75.8.0",
    "shap>=0.51.0",
    "xgboost>=3.2.0",
]
